Implemented Java21 features and enabled previews